truncate note preview for long body text, style note display. Issue with delete button styling

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -2,22 +2,9 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
 
-/* body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-} */
-
-.display-container {
-  border: solid white 0.5px;
-  height: 95vh;
-  border-radius: 10px;
-}
-
-.ui {
+#ui {
   display: grid;
   grid-template-columns: 1fr 5fr;
 }
